--- a/sass/Theme/light/_headerLight.scss
+++ b/sass/Theme/light/_headerLight.scss
@@ -32,6 +32,14 @@
           }
         }
       }
+      .darkLightMode {
+        .btn-light {
+          display: none;
+        }
+        .btn-dark {
+          display: inline-block;
+        }
+      }
     }
   }
 }
